[gd_scene load_steps=4 format=3 uid="uid://fsxf8gjh5ybm8"]

[ext_resource type="Script" path="res://algorithms/MachineLearning/optimization_algorithms/OptimizationAlgorithms.gd" id="1_script"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.2, 0.2, 0.2, 1)
metallic = 0.8
roughness = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.2, 0.8, 0.2, 1)
emission_enabled = true
emission = Color(0.2, 0.8, 0.2, 1)
emission_energy = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.8, 0.2, 0.2, 1)
emission_enabled = true
emission = Color(0.8, 0.2, 0.2, 1)
emission_energy = 0.3

[node name="OptimizationAlgorithms" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_energy = 1.5

[node name="LossLandscape" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)

[node name="LandscapeParticles" type="Node3D" parent="LossLandscape"]

[node name="LandscapeLabel" type="CSGBox3D" parent="LossLandscape"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="OptimizationCore" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="OptimizerHub" type="CSGBox3D" parent="OptimizationCore"]
size = Vector3(3, 3, 3)
material_override = SubResource("StandardMaterial3D_2")

[node name="OptimizerLabel" type="CSGBox3D" parent="OptimizationCore"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="OptimizerMethods" type="Node3D" parent="OptimizationCore"]

[node name="SGDCore" type="CSGSphere3D" parent="OptimizationCore/OptimizerMethods"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="AdamCore" type="CSGSphere3D" parent="OptimizationCore/OptimizerMethods"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="RMSpropCore" type="CSGSphere3D" parent="OptimizationCore/OptimizerMethods"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="AdagradCore" type="CSGSphere3D" parent="OptimizationCore/OptimizerMethods"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="MomentumCore" type="CSGSphere3D" parent="OptimizationCore/OptimizerMethods"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="Convergence" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="ConvergenceParticles" type="Node3D" parent="Convergence"]

[node name="ConvergenceLabel" type="CSGBox3D" parent="Convergence"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="GradientFlow" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0)

[node name="GradientCore" type="CSGBox3D" parent="GradientFlow"]
size = Vector3(6, 0.5, 3)
material_override = SubResource("StandardMaterial3D_2")

[node name="GradientLabel" type="CSGBox3D" parent="GradientFlow"]
size = Vector3(4, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="GradientVectors" type="Node3D" parent="GradientFlow"]

[node name="DataFlow" type="Node3D" parent="."]

[node name="FlowParticles" type="Node3D" parent="DataFlow"]

[node name="OptimizationMetrics" type="Node3D" parent="."]

[node name="LossMeter" type="Node3D" parent="OptimizationMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 8, 0)

[node name="LossBase" type="CSGBox3D" parent="OptimizationMetrics/LossMeter"]
size = Vector3(4, 0.2, 1)
material_override = SubResource("StandardMaterial3D_1")

[node name="LossIndicator" type="CSGSphere3D" parent="OptimizationMetrics/LossMeter"]
radius = 0.3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_2")

[node name="LearningRateMeter" type="Node3D" parent="OptimizationMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 8, 0)

[node name="LearningRateBase" type="CSGBox3D" parent="OptimizationMetrics/LearningRateMeter"]
size = Vector3(4, 0.2, 1)
material_override = SubResource("StandardMaterial3D_1")

[node name="LearningRateIndicator" type="CSGSphere3D" parent="OptimizationMetrics/LearningRateMeter"]
radius = 0.3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_2")

[node name="Grid" type="Node3D" parent="."]

[node name="GridLines" type="Node3D" parent="Grid"]
